# inkwell

./: .gitignore  ArchyAWS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
docs/: terraform-and-deployment-guide.md
inkwell.back/: Dockerfile  pyproject.toml  requirements.txt
inkwell.back/app/: main.py
inkwell.back/app/core/: config.py  database.py  security.py
inkwell.back/app/models/: __init__.py  book.py  challenge.py  generation_job.py  pdf_job.py  user.py
inkwell.back/app/routes/: __init__.py  books.py  challenge.py  generation.py  health.py  internal.py  pdf.py
inkwell.back/app/schemas/: __init__.py  book.py  challenge.py  generation.py  pdf.py
inkwell.back/app/services/: auth.py  challenge.py  generation.py  pdf.py
inkwell.back/app/tasks/: generate.py
inkwell.back/lambda/pdf_export/: main.py  requirements.txt
inkwell.back/terraform/: bedrock.tf  cognito-ui.css  cognito.tf  ec2.tf  events.tf  frontend.tf  lambda.tf  main.tf  network.tf  outputs.tf  queue.tf  rds.tf  ses.tf  storage.tf  userdata.sh
inkwell.back/tests/: conftest.py
inkwell.back/tests/test_routes/: test_books.py  test_challenge.py  test_generation.py  test_health.py  test_internal.py  test_pdf.py
inkwell.front/src/: App.test.tsx
src/: App.test.tsx  App.tsx  index.css
src/api/: books.ts  client.test.ts  client.ts  generation.ts  pdf.ts
src/auth/: CognitoProvider.tsx  useAuth.ts
src/hooks/: useBooks.ts  useChallenge.test.ts  useChallenge.ts  useGeneration.ts  usePdfExport.test.ts  usePdfExport.ts
template/: inkwell.html
(+49 files in other folders)
